[metadata]
name = django-advanced-cart
version = 0.1
description = A Django app to add product to store.
long_description = file: README.rst
url = https://github.com/amirxpr/django-advanced-cart
author = Amir
author_email = amirxpr@gmail.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django3 & Django4
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: